[project]
name = "discord-emoji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" }
]
requires-python = ">=3.13"
dependencies = ["httpx", "rich"]

[project.scripts]
discord-emoji = "discord_emoji:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "COM812"]
